--- a/statisk_site/productlist.html
+++ b/statisk_site/productlist.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/productlist.js" defer></script>
     <title>Productlist</title>
   </head>
 
