--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/index.js" defer></script>
     <title>Categories</title>
   </head>
 
